# exercises-euler

./: LICENSE  README.md
CXX/: .gitignore  CMakeLists.txt  README.md
CXX/cmake/: FindSphinx.cmake
CXX/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
CXX/include/euler/: euler001.hpp  euler002.hpp  euler003.hpp  euler004.hpp  euler005.hpp  euler006.hpp  euler007.hpp  euler008.hpp  euler009.hpp  euler010.hpp  euler011.hpp  euler012.hpp  euler013.hpp
CXX/include/euler/utils/: TriangleNumberGenerator.hpp  factors.hpp  factors.tpp  lists.hpp  maps.hpp  maths.hpp  primes.hpp  primes.tpp  recurrence.hpp  strings.hpp  sum.hpp  sumMult.hpp  sum_mult.hpp  template_types.hpp
CXX/src/: CMakeLists.txt  euler001.cpp  euler002.cpp  euler003.cpp  euler004.cpp  euler005.cpp  euler006.cpp  euler007.cpp  euler008.cpp  euler009.cpp  euler010.cpp  euler011.cpp  euler012.cpp  euler013.cpp
CXX/src/utils/: CMakeLists.txt  primes.cpp  recurrence.cpp  strings.cpp  sum.cpp  sumMult.cpp  sum_mult.cpp
CXX/tests/: CMakeLists.txt  euler001_test.cpp  euler002_test.cpp  euler003_test.cpp  euler004_test.cpp  euler005_test.cpp  euler006_test.cpp  euler007_test.cpp  euler008_test.cpp  euler009_test.cpp  euler010_test.cpp  euler011_test.cpp  euler012_test.cpp  euler013_test.cpp  test_main.cpp
CXX/tests/utils_tests/: CMakeLists.txt  TriangleNumberGenerator_test.cpp  factors_test.cpp  lists_test.cpp  maps_test.cpp  maths_test.cpp  primes_test.cpp  recurrence_test.cpp  strings_test.cpp  sumMult_test.cpp  sum_mult_test.cpp  sum_test.cpp
Haskell/: README.md  new-problem.sh
Haskell/euler001/: README.md  package.yaml
Haskell/euler001/app/: Main.hs
Haskell/euler001/src/: Euler001.hs
Haskell/euler001/test/: Euler001Test.hs
Haskell/euler002/: README.md  euler002.cabal  package.yaml
Haskell/euler002/app/: Main.hs
Haskell/euler002/src/: Euler002.hs
Haskell/euler002/test/: Euler002Test.hs
Haskell/euler003/: README.md  euler003.cabal  package.yaml
Haskell/euler003/app/: Main.hs
Haskell/euler003/src/: Euler003.hs
Haskell/euler003/test/: Euler003Test.hs
Haskell/euler004/: README.md  euler004.cabal  package.yaml
Haskell/euler004/app/: Main.hs
Haskell/euler004/src/: Euler004.hs
Haskell/euler004/test/: Euler004Test.hs
Haskell/euler005/: README.md  euler005.cabal  package.yaml  stack.yaml
Haskell/euler005/app/: Main.hs
Haskell/euler005/src/: Euler005.hs
Haskell/euler005/test/: Euler005Test.hs
Haskell/euler006/: README.md  euler006.cabal  package.yaml
Haskell/euler006/app/: Main.hs
Haskell/euler006/src/: Euler006.hs
Haskell/euler006/test/: Euler006Test.hs
Haskell/euler007/: README.md  euler007.cabal  package.yaml
Haskell/euler007/app/: Main.hs
Haskell/euler007/src/: Euler007.hs
Haskell/euler007/test/: Euler007Test.hs
Haskell/euler008/: README.md  euler008.cabal  package.yaml
Haskell/euler008/app/: Main.hs
Haskell/euler008/src/: Euler008.hs
Haskell/euler008/test/: Euler008Test.hs
Haskell/euler009/: README.md  euler009.cabal  package.yaml
Haskell/euler009/app/: Main.hs
Haskell/euler009/src/: Euler009.hs
Haskell/euler009/test/: Euler009Test.hs
Haskell/euler010/: README.md  euler010.cabal  package.yaml
Haskell/euler010/app/: Main.hs
Haskell/euler010/src/: Euler010.hs
Haskell/euler010/test/: Euler010Test.hs
Haskell/euler011/: README.md  euler011.cabal  package.yaml
Haskell/euler011/app/: Main.hs
Haskell/euler011/src/: Euler011.hs
Haskell/euler011/test/: Euler011Test.hs
Haskell/euler012/: README.md  euler012.cabal  package.yaml
Haskell/euler012/app/: Main.hs
Haskell/euler012/src/: Euler012.hs
Haskell/euler012/test/: Euler012Test.hs
Haskell/template/: README.md  eulerXXX.cabal  package.yaml
Haskell/template/app/: Main.hs
Haskell/template/src/: EulerXXX.hs
Haskell/template/test/: EulerXXXTest.hs
Python/: README.md
Python/euler001/: euler001.py  euler001_test.py
Python/euler002/: README.md  euler002.py  euler002_test.py
Python/euler003/: README.md  euler003.py  euler003_test.py
Python/euler004/: README.md  euler004.py  euler004_test.py
Python/euler005/: README.md  euler005.py  euler005_test.py
Python/euler006/: euler006.py  euler006_test.py
_Problems/euler001/: README.md
_Problems/euler005/: README.md
_Problems/euler007/: README.md
_Problems/euler008/: README.md
_Problems/euler011/: README.md
_Problems/euler012/: README.md
